rocketchat/deploy.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rocketchat
  labels:
    app: rocketchat
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
      - name: mongodb
        image: "mongo"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
        ports:
        - name: mongodb
          containerPort: 27017
        resources:
          requests:
            memory: 256Mi
            # cpu: 100M
        # resources:
        #   requests:
        #     memory: 256Mi
        #     cpu: 100M
        volumeMounts:
        - name: rocketchat
          mountPath: /bitnami/mongodb
          subPath: docker/mongodb
      - name: rocketchat
        image: "rocketchat/rocket.chat:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 60
          timeoutSeconds: 5
        resources:
          requests:
            memory: 512Mi
            # cpu: 300m
        # resources:
        #   requests:
        #     memory: 512Mi
        #     cpu: 300m
        volumeMounts:
        - name: rocketchat
          mountPath: /config
          subPath: docker/rocketchat
      volumes:
      - name: rocketchat
        glusterfs:
          endpoints: glusterfs-cluster
          path: data
          readOnly: false
