rocketchat/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rocketchat
  labels:
    app: rocketchat
spec:
  ports:
  - name: http
    port: 3000
  selector:
    app: rocketchat
