rocketchat/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rocketchat
  labels:
    app: rocketchat
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.passHostHeader: "true"
    traefik.backend.loadbalancer.stickey: "true"
spec:
  rules:
  - host: chat.leangeder.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: rocketchat
          servicePort: 3000
